Hadoop HDFS Change Log

Release 2.7.6 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES

    HDFS-12881. Output streams closed with IOUtils suppressing write errors.
    (Ajay Kumar via jlowe)

    HDFS-12347. TestBalancerRPCDelay#testBalancerRPCDelay fails very frequently.
    (Bharat Viswanadham via Tsz-Wo Nicholas Sze)

Release 2.7.5 - 2017-12-14

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HDFS-9153. Pretty-format the output for DFSIO. (Kai Zheng via wheat9)

    HDFS-8797. WebHdfsFileSystem creates too many connections for pread. (jing9)

    HDFS-12131. Add some of the FSNamesystem JMX values as metrics.
    (Erik Krogen via wang, shv)
    
    HDFS-12420. Add an option to disallow 'namenode format -force'.
    (Ajay Kumar via Arpit Agarwal, zhz)
    
    HDFS-10984. Expose nntop output as metrics. (Siddharth Wagle via xyao, zhz)

    HDFS-9259. Make SO_SNDBUF size configurable at DFSClient side for hdfs write
    scenario. (original patch Mingliang Liu via Ming Ma, branch-2.7 backport
    done under HDFS-12823, Erik Krogen via zhz).

    HDFS-12596. Add TestFsck#testFsckCorruptWhenOneReplicaIsCorrupt
    back to branch-2.7. (Xiao Chen)

  OPTIMIZATIONS

    HDFS-10711. Optimize FSPermissionChecker group membership check.
    (Daryn Sharp via kihwal)

    HDFS-12323. NameNode terminates after full GC thinking QJM unresponsive
    if full GC is much longer than timeout. (Erik Krogen via shv)

    HDFS-8829. Make SO_RCVBUF and SO_SNDBUF size configurable for
    DataTransferProtocol sockets and allow configuring auto-tuning (He Tianyi
    via Colin P. McCabe)

  BUG FIXES

    HDFS-12157. Do fsyncDirectory(..) outside of FSDataset lock.
    (Vinayakumar B. via kihwal)

    HDFS-9107. Prevent NN's unrecoverable death spiral after full GC (Daryn
    Sharp via Colin P. McCabe)

    HDFS-10738. Fix
    TestRefreshUserMappings.testRefreshSuperUserGroupsConfiguration